Closed Bug 131399 Opened 24 years ago Closed 24 years ago

"An unknown error..." with a fresh build

Categories

(Core :: Networking: HTTP, defect, P1)

x86
All
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: Matti, Assigned: darin.moz)

References

()

Details

(Keywords: regression, testcase, top100)

Attachments

(2 files)

win2k and a 2h old cvs build. I saw this earlier (with your fix) but i couldn't reproduce it. I found now a testcase via bug 131396. Open the URL in a new window and select the "Printed catalog" link and you get this error (error for an empty document)
possible the same problem : http://www.setigermany,de , click a link in the left menu.
I also added a testcase for this with bug 131214. Also related: bug 131426.
also this problem occurs on http://www.world-direct.com/mozilla/dhtml/index.html just click on 'company'. build 2002031608 on win-xp.
Severity: normal → major
*** Bug 131548 has been marked as a duplicate of this bug. ***
*** Bug 131214 has been marked as a duplicate of this bug. ***
Blocks: 131426
Here's one testcase that trigger the bug. However, there're other ways to trigger bug, see bug 131426 which is related to JavaScript checking form input.
Keywords: testcase
*** Bug 131706 has been marked as a duplicate of this bug. ***
Keywords: top100
No longer blocks: 131426
*** Bug 131426 has been marked as a duplicate of this bug. ***
http://appzone.intel.com/boards/AllBrowsers.asp click any of the arrows outside selector boxes: "An unknown error occured" alert appears about at the same time as a popup window from Intel.
*** Bug 131720 has been marked as a duplicate of this bug. ***
From bug 131720: <http://cgi.ebay.com/ws/eBayISAPI.dll?ViewItem&item=851940160> Scroll down to the photos of the item and click on any of the smaller photos to the right. Although the image correctly changes in the supersized photo box on the left, you will get an error dialog.
OS: Windows 2000 → All
Blocks: 131724
*** Bug 131750 has been marked as a duplicate of this bug. ***
*** Bug 131765 has been marked as a duplicate of this bug. ***
*** Bug 131434 has been marked as a duplicate of this bug. ***
ok, this "unknown error" dialog really sucks! i'll happily disable it :-)
Severity: major → critical
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.0
*** Bug 131791 has been marked as a duplicate of this bug. ***
*** Bug 131794 has been marked as a duplicate of this bug. ***
Comment on attachment 74776 [details] [diff] [review] v1 patch - remove annoying "unknown error" dialog r=dougt
Attachment #74776 - Flags: review+
Comment on attachment 74776 [details] [diff] [review] v1 patch - remove annoying "unknown error" dialog sr=bienvenu, with pleasure (I was getting this a lot from the browser).
Attachment #74776 - Flags: superreview+
*** Bug 131806 has been marked as a duplicate of this bug. ***
*** Bug 131559 has been marked as a duplicate of this bug. ***
*** Bug 131821 has been marked as a duplicate of this bug. ***
Comment on attachment 74776 [details] [diff] [review] v1 patch - remove annoying "unknown error" dialog a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #74776 - Flags: approval+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Summary: "An unkown error..." with a fresh build → "An unknown error..." with a fresh build
*** Bug 131908 has been marked as a duplicate of this bug. ***
darin, just a thought.. but I had an idea about this today.. see bug 80293 comment 8 & comment #9 for more.
verified: 03/19/02 trunk builds, win NT4, linux rh6, mac osX
Status: RESOLVED → VERIFIED
*** Bug 132110 has been marked as a duplicate of this bug. ***
*** Bug 131729 has been marked as a duplicate of this bug. ***
*** Bug 132298 has been marked as a duplicate of this bug. ***
*** Bug 133264 has been marked as a duplicate of this bug. ***
This time, with a new build (id 2002041508 on mac 9.2.2), I am getting very similar "document contains no data" when attempting to use bugzilla. it looks like this bug, but with a diffrent error. should I reopen this or file a new one?
Open a new bug, it's known where this bug came from and that's definitly fixed.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: