remove annoying "unknown error" dialog. b=131399, r=dougt, sr=bienvenu, a=asa